@@ -4,6 +4,7 @@
 
 package io.airbyte.integrations.source.postgres.xmin;
 
+import static io.airbyte.integrations.source.postgres.ctid.CtidStateManager.STATE_TYPE_KEY;
 import static io.airbyte.integrations.source.postgres.ctid.CtidUtils.identifyNewlyAddedStreams;
 import static io.airbyte.integrations.source.postgres.xmin.PostgresXminHandler.shouldPerformFullSync;
 
@@ -18,16 +19,20 @@ import io.airbyte.protocol.models.v0.AirbyteStreamNameNamespacePair;
 import io.airbyte.protocol.models.v0.ConfiguredAirbyteCatalog;
 import io.airbyte.protocol.models.v0.ConfiguredAirbyteStream;
 import io.airbyte.protocol.models.v0.StreamDescriptor;
+import io.airbyte.protocol.models.v0.SyncMode;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * The class mainly categorises the streams based on the state type into two categories:
- * 1. Streams that need to be synced via ctid iterator: These are streams that are either newly added or did
+ * The class mainly categorises the streams based on the state type into two categories: 1. Streams
+ * that need to be synced via ctid iterator: These are streams that are either newly added or did
  * not complete their initial sync. 2. Streams that need to be synced via xmin iterator: These are
  * streams that have completed their initial sync and are not syncing data incrementally.
  */
@@ -53,11 +58,11 @@ public class XminCtidUtils {
           return;
         }
 
-        if (streamState.has("state_type")) {
-          if (streamState.get("state_type").asText().equalsIgnoreCase("ctid")) {
+        if (streamState.has(STATE_TYPE_KEY)) {
+          if (streamState.get(STATE_TYPE_KEY).asText().equalsIgnoreCase("ctid")) {
             statesFromCtidSync.add(stateMessage);
             streamsStillInCtidSync.add(new AirbyteStreamNameNamespacePair(streamDescriptor.getName(), streamDescriptor.getNamespace()));
-          } else if (streamState.get("state_type").asText().equalsIgnoreCase("xmin")) {
+          } else if (streamState.get(STATE_TYPE_KEY).asText().equalsIgnoreCase("xmin")) {
             if (shouldPerformFullSync(currentXminStatus, streamState)) {
               final AirbyteStreamNameNamespacePair pair = new AirbyteStreamNameNamespacePair(streamDescriptor.getName(),
                   streamDescriptor.getNamespace());
@@ -67,7 +72,7 @@ public class XminCtidUtils {
               statesFromXminSync.add(stateMessage);
             }
           } else {
-            throw new RuntimeException("Unknown state type: " + streamState.get("state_type").asText());
+            throw new RuntimeException("Unknown state type: " + streamState.get(STATE_TYPE_KEY).asText());
           }
         } else {
           throw new RuntimeException("State type not present");
@@ -76,19 +81,21 @@ public class XminCtidUtils {
       });
     }
 
-    final List<ConfiguredAirbyteStream> newlyAddedStreams = identifyNewlyAddedStreams(fullCatalog, alreadySeenStreams);
+    final List<ConfiguredAirbyteStream> newlyAddedIncrementalStreams =
+        identifyNewlyAddedStreams(fullCatalog, alreadySeenStreams, SyncMode.INCREMENTAL);
     final List<ConfiguredAirbyteStream> streamsForCtidSync = new ArrayList<>();
     fullCatalog.getStreams().stream()
         .filter(stream -> streamsStillInCtidSync.contains(AirbyteStreamNameNamespacePair.fromAirbyteStream(stream.getStream())))
         .map(Jsons::clone)
         .forEach(streamsForCtidSync::add);
 
-    streamsForCtidSync.addAll(newlyAddedStreams);
+    streamsForCtidSync.addAll(newlyAddedIncrementalStreams);
 
     final List<ConfiguredAirbyteStream> streamsForXminSync = fullCatalog.getStreams().stream()
+        .filter(stream -> stream.getSyncMode() == SyncMode.INCREMENTAL)
         .filter(stream -> !streamsForCtidSync.contains(stream))
         .map(Jsons::clone)
-        .toList();
+        .collect(Collectors.toList());
 
     return new StreamsCategorised<>(new CtidStreams(streamsForCtidSync, statesFromCtidSync), new XminStreams(streamsForXminSync, statesFromXminSync));
   }
@@ -96,6 +103,39 @@ public class XminCtidUtils {
   public record XminStreams(List<ConfiguredAirbyteStream> streamsForXminSync,
                             List<AirbyteStateMessage> statesFromXminSync) {
 
+  }
+
+  public static void reclassifyCategorisedCtidStream(final StreamsCategorised<XminStreams> categorisedStreams,
+                                                     AirbyteStreamNameNamespacePair streamPair) {
+    final Optional<ConfiguredAirbyteStream> foundStream = categorisedStreams
+        .ctidStreams()
+        .streamsForCtidSync().stream().filter(c -> Objects.equals(
+            streamPair,
+            new AirbyteStreamNameNamespacePair(c.getStream().getName(), c.getStream().getNamespace())))
+        .findFirst();
+    foundStream.ifPresent(c -> {
+      categorisedStreams.remainingStreams().streamsForXminSync().add(c);
+      categorisedStreams.ctidStreams().streamsForCtidSync().remove(c);
+      LOGGER.info("Reclassified {}.{} as xmin stream", c.getStream().getNamespace(), c.getStream().getName());
+    });
+
+    // Should there ever be a matching ctid state when ctid is not possible?
+    final Optional<AirbyteStateMessage> foundStateMessage = categorisedStreams
+        .ctidStreams()
+        .statesFromCtidSync().stream().filter(m -> Objects.equals(streamPair,
+            new AirbyteStreamNameNamespacePair(
+                m.getStream().getStreamDescriptor().getName(),
+                m.getStream().getStreamDescriptor().getNamespace())))
+        .findFirst();
+    foundStateMessage.ifPresent(m -> {
+      categorisedStreams.remainingStreams().statesFromXminSync().add(m);
+      categorisedStreams.ctidStreams().statesFromCtidSync().remove(m);
+    });
+  }
+
+  public static void reclassifyCategorisedCtidStreams(final StreamsCategorised<XminStreams> categorisedStreams,
+                                                      List<AirbyteStreamNameNamespacePair> streamPairs) {
+    streamPairs.forEach(c -> reclassifyCategorisedCtidStream(categorisedStreams, c));
   }
 
 }
